# EMBMagentprototype

./: .env.example  .gitignore  CHAT_DEMO.md  CHAT_DEMO_COMPLETION.md  CHAT_DEMO_EXAMPLES.md  CHAT_DEMO_INDEX.md  CHAT_DEMO_INTEGRATION.md  CHAT_DEMO_QUICKSTART.md  CHAT_DEMO_RUN_INSTRUCTIONS.md  CHAT_DEMO_START_HERE.md  CHAT_DEMO_SUMMARY.md  CHAT_DEMO_VISUAL_GUIDE.md  DELIVERABLES.txt  PHASE4.md  PHASE5.md  PROJECT.md  README.md  ROOT_ENDPOINT_FIXED.md  ROOT_ENDPOINT_IMPROVEMENT.md  SETUP_STATUS.md  STREAMLIT_ASYNCIO_FIX.md  STREAMLIT_ERROR_FIXED.md  STREAMLIT_FIX_COMPLETE.md  STREAMLIT_FIX_SUMMARY.md  STREAMLIT_QUICK_START.md  STREAMLIT_READY_TO_USE.md  TASK_COMPLETE_SUMMARY.md  config.py  config.yaml  logging_config.py  metrics.py  pyproject.toml  pytest.ini  test_chat_demo.py  test_llm_simple.py  test_mcp_request.json  web_server.py
agents/: __init__.py  base_agent.py
agents/ew_planner/: __init__.py  agent.py
agents/isr_manager/: __init__.py  agent.py
agents/spectrum_manager/: __init__.py  agent.py
broker/: __init__.py  broker.py
dashboard/: app.py
database/: __init__.py  models.py  repository.py
llm_abstraction/: __init__.py  anthropic_provider.py  cache.py  openai_provider.py  provider.py  registry.py
mcp_client/: __init__.py  client.py
mcp_server/: main.py  models.py  tools.py
scripts/: chat_demo.py  run_agents.py  run_server.py  setup.sh  test_server.sh  view_agent_transcript.py
tests/: __init__.py  conftest.py  integration_test_agents.py  integration_test_multi_agent.py  integration_test_workflows.py  test_broker.py  test_cache.py  test_mcp_tools.py
workflows/: frequency_allocation.py  multi_agent_coordination.py  multi_agent_coordination_async.py  test_caching.py
(+6 files in other folders)
